Add blog components; reorganize components into folders

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,10 @@ body {
     sans-serif;
 }
 
+a {
+    color: #00c58e;
+}
+
 table.features {
     // both in comparison and in single antagonist
 
