--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -9,11 +9,20 @@ body {
     'Helvetica Neue',
     Arial,
     sans-serif;
+    padding: 5px 2%;
 }
 
 h1, h2, h3, h4, h5, th {
     // headers
     color: #35495e;
+    margin-top: 0.5em;
+    margin-bottom: 0.2em;
+    font-weight: normal;
+}
+
+p {
+    margin-top: 0.3em;
+    margin-bottom: 0.1em;
 }
 
 a, a * {
