Use time tag for dates

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -34,6 +34,11 @@ a, a * {
     }
 }
 
+time {
+    opacity: .5;
+    font-size: 85%;
+}
+
 table.features {
     // both in comparison and in single antagonist
 
