Some styling for home and headers

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -18,10 +18,11 @@ h1, h2, h3, h4, h5, th {
     margin-top: 1.0em;
     margin-bottom: 0.5em;
     font-weight: normal;
+    line-height: 1.1;
 }
 h1 { font-size: 2em; }
-h2 { font-size: 1.5em; }
-h3 { font-size: 1.3em; }
+h2 { font-size: 1.4em; }
+h3 { font-size: 1.2em; }
 h4 { font-size: 1em; }
 h5 { font-size: 0.8em; }
 
